<resources>
    <string name="app_name">Zstok</string>

    <string name="zs_hint_email">Email</string>
    <string name="zs_hint_senha">Senha</string>
    <string name="zs_hint_confirmar_senha">Confirmar senha</string>
    <string name="zs_hint_cf_cnpj">CPF/CNPJ</string>
    <string name="zs_hint_nome">Nome</string>
    <string name="zs_hint_nome_produto">Digite o nomeProduto do produto</string>
    <string name="zs_hint_preco_produto">Digite o preço do produto</string>
    <string name="zs_hint_quantidade_estoque_produto">Quantidade de produtos no estoque</string>
    <string name="zs_hint_descricao_produto">Descreva o produto</string>
    <string name="zs_hint_nome_usuario">Nome do usuário</string>
    <string name="zs_hint_email_usuario">Email do Usuário</string>
    <string name="zs_hint_data_nascimento_usuario">Data de Nascimento</string>
    <string name="zs_hint_nova_data_nascimento">Digite a nova data de nascimento</string>
    <string name="zs_hint_cpf_usuario">CPF</string>
    <string name="zs_hint_cnpj_usuario">CNPJ</string>
    <string name="zs_hint_telefone_usuario">Telefone</string>
    <string name="zs_hint_mascara_telefone">(XX)XXXXX-XXXX</string>
    <string name="zs_hint_endereco_usuario">Endereço</string>
    <string name="zs_hint_razao_social">Razão Social</string>
    <string name="zs_hint_nome_fantasia">Nome fantasia</string>
    <string name="zs_hint_novo_nome">Digite novo nomeProduto</string>
    <string name="zs_hint_novo_telefone">Digite novo telefone</string>
    <string name="zs_hint_novo_email">Digite novo email</string>
    <string name="zs_hint_digite_senha">Digite sua senha</string>
    <string name="zs_hint_rua_alterar_perfil">Digite sua rua</string>
    <string name="zs_hint_complemento_alterar_perfil">Digite o complemento</string>
    <string name="zs_hint_cidade_alterar_perfil">Digite sua cidade</string>
    <string name="zs_hint_cpf_atual_alterar_perfil">Digite seu cpf atual</string>
    <string name="zs_hint_cpf_alterar_perfil">Digite novo cpf</string>

    <string name="zs_dialogo_sim">Sim</string>
    <string name="zs_dialogo_nao">Não</string>
    <string name="zs_dialogo_titulo">Sair</string>
    <string name="zs_dialogo_mensagem_sair_conta">Tem certeza que deseja sair?</string>

    <string name="zs_txt_registro">Não é registrado?</string>
    <string name="zs_txt_registre_se"><b><u>Registre-se</u></b></string>
    <string name="zs_txt_esqueceu_senha"><u>Não sei minha senha!</u></string>

    <string name="zs_btn_entrar">Entrar</string>
    <string name="zs_btn_cadastrar">Cadastrar</string>
    <string name="zs_btn_enviar">Enviar</string>
    <string name="zs_btn_alterar_nome">Alterar nomeProduto</string>
    <string name="zs_btn_alterar_email">Alterar email</string>
    <string name="zs_btn_alterar_telefone">Alterar telefone</string>
    <string name="zs_btn_alterar_endereco">Alterar endereço</string>
    <string name="zs_btn_alterar_cpf">Alterar cpf</string>
    <string name="zs_btn_alterar_data_nascimento">Alterar data de nascimento</string>

    <string name="zs_sucesso_usuario_cadastrado">Usuário cadastrado com sucesso!</string>
    <string name="zs_email_enviado_sucesso">Email enviado com sucesso!</string>
    <string name="zs_nome_alterado_sucesso">Nome alterado com sucesso!</string>
    <string name="zs_email_alterado_sucesso">Email alterado com sucesso!</string>
    <string name="zs_telefone_alterado_sucesso">Telefone alterado com sucesso!</string>
    <string name="zs_endereco_alterado_sucesso">Endereço alterado com sucesso!</string>
    <string name="zs_cpf_alterado_sucesso">CPF alterado com sucesso!</string>
    <string name="zs_data_nascimento_alterado_sucesso">Data de nascimento alterada com sucesso!</string>

    <string name="zs_excecao_campo_vazio">Preencha o campo vazio</string>
    <string name="zs_excecao_cpf_cnpj">Digite um CPF ou CNPJ válido</string>
    <string name="zs_excecao_cpf">Digite um CPF válido!</string>
    <string name="zs_excecao_cpf_cadastrado_sistema">CPF já cadastrado no sistema</string>
    <string name="zs_excecao_cpf_nao_cadastrado">Cpf não cadastrado no sistema!</string>
    <string name="zs_excecao_cnpj_cadastrado_sistema">CNPJ já cadastrado no sistema</string>
    <string name="zs_excecao_cnpj">Digite um CNPJ válido!</string>
    <string name="zs_excecao_senha_forte">Digite uma senha com no mínimo 6 caracteres</string>
    <string name="zs_excecao_email">Email digitado é inválido</string>
    <string name="zs_excecao_email_cadastrado">Esse email já esta cadastrado no sistema</string>
    <string name="zs_excecao_senhas_iguais">Digite senhas iguais</string>
    <string name="zs_excecao_conexao_falha">Verifique sua conexão com a internet</string>
    <string name="zs_excecao_usuario_nao_encontrado">Usuário não encontrado</string>
    <string name="zs_excecao_usuario_senha">Usuario ou Senha inválido(s)!</string>
    <string name="zs_excecao_database">"Erro ao realizar operação. Verifique sua conexão com a internet ou contate o suporte."</string>
    <string name="zs_excecao_senha">Senha inválida!</string>
    <string name="zs_excecao_espaco_branco">Não é permitido deixar espaços em branco</string>
    <string name="zs_excecao_dia_invalido">Digite um dia válido!</string>
    <string name="zs_excecao_mes_invalido">Digite um mês válido!</string>

    <string name="zs_menu_lateral_perfil">Meu perfil</string>
    <string name="zs_menu_lateral_negociacao">Negociação</string>
    <string name="zs_menu_lateral_produtos">Meus produtos</string>
    <string name="zs_menu_lateral_sair">Sair</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="title_activity_main_pessoa_fisica">Negociações</string>
    <string name="title_activity_pessoa_fisica">Meu perfil</string>
    <string name="title_activity_perfil_pessoa_juridica">Meu perfil</string>
    <string name="title_activity_main_pessoa_juridica">Negociações</string>
    <string name="title_activity_meus_produtos">Meus produtos</string>


</resources>
