<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".infraestrutura.gui.LoginActivity">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/zs_hint_email"/>

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zs_hint_senha"/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/zs_btn_entrar"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/frame_layout_login"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        tools:context=".infraestrutura.gui.LoginActivity">

        <TextView
            android:id="@+id/tvNaoRegistrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/zs_txt_registro"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvRegistreSe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/zs_txt_registre_se" />
    </FrameLayout>
</LinearLayout>