<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/jabuticaba"
    android:padding="16dp"
    tools:context=".pessoa.gui.RegistroActivity">

    <EditText
        android:textColor="@color/cloudGrey"
        android:textColorHint="@color/cimento"
        android:backgroundTint="@color/cimento"
        android:id="@+id/edtRegistroNome"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:drawableLeft="@drawable/ic_nome"
        android:drawableStart="@drawable/ic_nome"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/zs_hint_nome"/>

    <EditText
        android:id="@+id/edtRegistroCpfCnpj"
        android:textColor="@color/cloudGrey"
        android:textColorHint="@color/cimento"
        android:backgroundTint="@color/cimento"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:drawableLeft="@drawable/ic_cpf_cnpj"
        android:drawableStart="@drawable/ic_cpf_cnpj"
        android:drawablePadding="10dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/zs_hint_cf_cnpj"/>

    <EditText
        android:id="@+id/edtRegistroEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textColor="@color/cloudGrey"
        android:textColorHint="@color/cimento"
        android:backgroundTint="@color/cimento"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/zs_hint_email"
        android:inputType="textWebEmailAddress"/>

    <EditText
        android:id="@+id/edtRegistroSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/cloudGrey"
        android:textColorHint="@color/cimento"
        android:backgroundTint="@color/cimento"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/zs_hint_senha"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edtRegistroConfirmarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:textColor="@color/cloudGrey"
        android:textColorHint="@color/cimento"
        android:backgroundTint="@color/cimento"
        android:ems="10"
        android:hint="@string/zs_hint_confirmar_senha"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_white"
        android:backgroundTint="@color/goiaba"
        android:text="@string/zs_btn_cadastrar" />

</LinearLayout>