<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/jabuticaba"
    tools:context=".perfil.gui.AlterarEnderecoPessoaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".perfil.gui.AlterarEnderecoPessoaActivity">

        <EditText
            android:id="@+id/edtAlterarRuaPessoa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/zs_hint_rua_alterar_perfil"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_endereco"
            android:drawablePadding="10dp"
            android:textColorHint="@color/cimento"
            android:textColor="@color/cloudGrey"
            android:backgroundTint="@color/cimento"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edtAlterarComplementoPessoa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/zs_hint_complemento_alterar_perfil"
            android:padding="10dp"
            android:textColorHint="@color/cimento"
            android:textColor="@color/cloudGrey"
            android:backgroundTint="@color/cimento"
            android:drawableLeft="@drawable/ic_endereco"
            android:drawablePadding="10dp"
            android:inputType="text"/>
        
        <EditText
            android:id="@+id/edtAlterarCidadePessoa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/zs_hint_cidade_alterar_perfil"
            android:textColorHint="@color/cimento"
            android:textColor="@color/cloudGrey"
            android:backgroundTint="@color/cimento"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_endereco"
            android:drawablePadding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/cimento"
            android:layout_marginBottom="10dp">
            <Spinner
                android:id="@+id/spnAlteraEstadoPerfil"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:entries="@array/spinner_estado"
                android:paddingLeft="30dp"
                android:backgroundTint="@color/white"
                android:paddingRight="30dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnAlterarEnderecoPessoa"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/goiaba"
            android:text="@string/zs_btn_alterar_endereco"/>

    </LinearLayout>

</LinearLayout>